libnothelix/tests/snapshots/engine_snapshots__conceal-fourier-overlays.snap
---
source: libnothelix/tests/engine_snapshots.rs
expression: case.output
---
57	
58	
59	
60	
61	
63	̂
65	ξ
66	
67	
72	∫
73	
74	
75	
77	
85	
79	∞
80	
81	
82	
83	
84	
87	
94	
88	∞
89	
90	
91	
92	
93	
101	 
102	
106	
120	
109	π
110	
111	
117	ξ
118	
119	
122	 
123	
158	∫
159	
160	
161	
163	
171	
165	∞
166	
167	
168	
169	
170	
173	
180	
174	∞
175	
176	
177	
178	
179	
182	
183	
184	
185	
186	
188	̂
190	ξ
191	
192	
195	 
196	
200	
213	
202	π
203	
204	
210	ξ
211	
212	
215	 
216	
219	ξ
220	
221	
256	∫
257	
258	
259	
267	²
268	
270	 
271	
278	∫
279	
280	
281	
284	
285	
286	
287	
288	
290	̂
292	ξ
293	
294	
297	²
298	
300	 
301	
304	ξ
305	
306	
348	‖
349	
351	‖
352	
353	₂
354	
358	‖
359	
360	
361	
362	
363	
364	
366	̂
367	‖
368	
369	₂
370	
386	∈
387	
388	
391	²
392	
394	ℝ
395	
396	
397	
398	
399	
400	
401	
402	
403
