libnothelix/tests/snapshots/engine_snapshots__conceal-linear-algebra-overlays.snap
---
source: libnothelix/tests/engine_snapshots.rs
expression: case.output
---
43	∈
44	
45	
47	ℝ
48	
49	
50	
51	
52	
53	
54	
55	
56	
58	
69	
61	×
62	
63	
64	
65	
66	
79	ᵀ
80	
81	
82	
83	
131	ᵀ
132	
133	
134	
135	
143	Λ
144	
145	
146	
147	
148	
149	
157	Λ
158	
159	
160	
161	
162	
163	
167	
168	
169	
170	
171	
172	
173	
174	
179	
181	λ
182	
183	
184	
185	
186	
187	
188	₁
189	
192	…
193	
194	
195	
196	
197	
200	λ
201	
202	
203	
204	
205	
206	
207	ₙ
208	
246	𝐯
247	
248	
249	
250	
251	
252	
253	
254	
255	
256	ᵢ
257	
261	λ
262	
263	
264	
265	
266	
267	
268	ᵢ
269	
271	𝐯
272	
273	
274	
275	
276	
277	
278	
279	
280	
281	ᵢ
282	
291	‖
292	
293	𝐯
294	
295	
296	
297	
298	
299	
300	
301	
302	
303	ᵢ
304	
305	‖
306	
307	₂
308	
340	‖
341	
343	‖
344	
345	₂
346	
350	
354	ᵢ
355	
358	λ
359	
360	
361	
362	
363	
364	
365	ᵢ
366	
376	
377	
378	
379	
380	
381	
382	
383	
386	
393	∑
394	
395	
396	
397	ᵢ
398	
400	λ
401	
402	
403	
404	
405	
406	
407	ᵢ
408
