libnothelix/tests/snapshots/engine_snapshots__error-long-source-line.snap
---
source: libnothelix/tests/engine_snapshots.rs
expression: case.output
---
error[E009]: dimensions don't match
  --> cell 9, line 2
   |
  2 |     A = [1.0 2.0 3.0 4.0 5.0; 6.0 7.0 8.0 9.0 10.0; 11.0 12.0 13.0 14.0 15.0; 16.0 17.0 18.0 19.0 20.0; 21.0 22.0 23.0 24.0 25.0] * x
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | DimensionMismatch: second dimension of A, 5, does not match length of x, 4
   |
   = help: For A*B, inner dimensions must agree: size(A,2) == size(B,1). Check with
   = help: size().
   = example:
   |   size(A)  # → (m, n)
   |   size(B)  # → (p, q)  — need n == p for A*B
